--- a/fun-comp/src/Components/Counter/Counter.css
+++ b/fun-comp/src/Components/Counter/Counter.css
@@ -1,21 +1,37 @@
 .counter_container {
   display: flex;
+
   height: 90vh;
   align-items: center;
   justify-content: center;
 }
 .button_container {
-  display: flex;
+  display: inline-table;
   background-color: bisque;
   padding: 20px;
-  width: 300px;
-  height: 200px;
+  width: 500px;
+  height: 350px;
   align-items: center;
   justify-content: center;
   gap: 40px;
   box-shadow: 1px 5px 10px #555;
   border-radius: 10px;
 }
+
+.button0_container {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  padding: 20px;
+}
+
+.button1_container {
+  margin-top: 10px;
+  gap: 12px;
+  display: flex;
+  flex-direction: column;
+}
+
 .btn {
   padding: 20px 30px;
   border-radius: 6px;
@@ -25,3 +41,22 @@
   background: green;
   color: white;
 }
+
+.btn1 {
+  display: flex;
+  flex-direction: column;
+  margin-top: 15px;
+  font-size: 20px;
+  padding: 12px;
+  border-radius: 5px;
+  box-shadow: 2px 5px 10px;
+  align-items: center;
+}
+
+.h3 {
+  display: flex;
+  margin-top: 20px;
+  justify-content: center;
+  font-size: 25px;
+}
+
